update mario man page

--- a/mario_src/mario.1
+++ b/mario_src/mario.1
@@ -9,6 +9,11 @@ mario \- have an ASCII art mario run over your screen
 lets an ASCII art mario run from left to right.
 .SH OPTIONS
 .TP
-.BR \-f  =\fIFRAMERATE\fR
-Sets the framerate of the mario animation.
-Default is 10 frames per second.
+.BR \-f\ \fIFRAMERATE\fR
+Sets the framerate of the mario animation. Default is 10 frames per second.
+.SH AUTHOR
+Written by Daniel Schuette.
+.SH COPYRIGHT
+This is free software, \fBmario\fR is licensed under an MIT license and can be used and redistributed under its terms and conditions. Visit <https://github.com/DanielSchuette/bin> for more information.
+.SH REPORTING BUGS
+Please open an issue at <https://github.com/DanielSchuette/bin>.
